Fixed spelling and wording

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -119,13 +119,13 @@ Finally the strengths of the simulation could be exploited more. In the research
 
 A different model is designed in \cite{kerkhove2017optimised}. It uses similar methods as used in \cite{barlow2018mixed}, namely a mixed-method of optimisation and simulation, but but in a significantly different way. The research incorporates certain industry restrictions to do with vessel renting; it keeps track of when vessels are commissioned and decommissioned, incorporates a price for both, and has minimal renting and downtime periods. These logically make sense, as the vessels likely have costs to travel between the storage and used port, and the rental company will usually not be able to find other uses for a vessel if it has a sort down time. 
 
-Related to this, the variables being decided on are the gate times of the tasks, instead of the start times as previously. The gate time refers to the time from which resources for a certain task should be made available. These times should be determined in advance, as there are generally long lead times associated with renting the vessels (hence they do not lend themselves much for dynamic scheduling). This allows for the optimisation to directly influence when the money is spend, which is a major focus of this research. The objective function is also different to accomodate this, it maximises net present value of the complete project. This takes into account discount rates both on exenses and project value, which are emphesised in the literature. These rates are higher than traditionally used, as a main reason to include discount rates is the inherent uncertainty of the future, and projects of this nature have an even higher degree of uncertainty.
+Related to this, the variables being decided on are the gate times of the tasks, instead of the start times as previously. The gate time refers to the time from which resources for a certain task should be made available. These times should be determined in advance, as there are generally long lead times associated with renting the vessels (hence they do not lend themselves much for dynamic scheduling). This allows for the optimisation to directly influence when the money is spend, which is a major focus of this research. The objective function is also different to accommodate this, it maximizes net present value of the complete project. This takes into account discount rates both on expenses and project value, which are emphasized in the literature. These rates are higher than traditionally used, as a main reason to include discount rates is the inherent uncertainty of the future, and projects of this nature have an even higher degree of uncertainty.
 
-This leads me to a major limitation of this research. While the monetary value of the project is presented as the main focus, there is no mention of any postive cashflow starting when the project is partly done, nor are there any deadlines for milestones mentioned (such as when the first 10\% or 50\% of the turbines are operational). Therefore the only postive value considered in the objective is the fixed value of the project upon completion, subject to discount rates. For research so focussed on the financial perspecitve, not incorporating the possibility of early positive cashflows seems like a big gap, and a possible improvement for future research.
+This leads me to a major limitation of this research. While the monetary value of the project is presented as the main focus, there is no mention of any positive cashflow starting when the project is partly done, nor are there any deadlines for milestones mentioned (such as when the first 10\% or 50\% of the turbines are operational). Therefore the only positive value considered in the objective is the fixed value of the project upon completion, subject to discount rates. For research so focused on the financial perspective, not incorporating the possibility of early positive cashflows seems like a big gap, and a possible improvement for future research.
 
 The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and months to totally halt all execution are identified. Since there is only a binary value to be determined for each month there are only $12^2 = 144$ possible variations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
 
-Another limitation of this paper are the genes, which are fairly high level. They determine which (category of) tasks can be performed in which month, but determining the schedule on a more detailed timescale can likely lead to much better results. A conversion algorithm is used to generate gate times for each task based on any given chromosome, but it is very simplistic. Every task is placed immedately after all preceding tasks should be completed if there are no weather delays. This is then tested with a single simulation, and if any task executions violate the given chormosome the gate time of that task is shifted forward to the next eligble period. This seems like a very simplistic method to use (as the genes operate on a much larger timescale than the gate times) and leads me to think improvement might be very beneficial.
+Another limitation of this paper are the genes, which are fairly high level. They determine which (category of) tasks can be performed in which month, but determining the schedule on a more detailed timescale can likely lead to much better results. A conversion algorithm is used to generate gate times for each task based on any given chromosome, but it is very simplistic. Every task is placed immediately after all preceding tasks should be completed if there are no weather delays. This is then tested with a single simulation, and if any task executions violate the given chromosome the gate time of that task is shifted forward to the next eligible period. This seems like a very simplistic method to use (as the genes operate on a much larger timescale than the gate times) and leads me to think improvement might be very beneficial.
 
 The final thing to note about this research is the advanced weather simulation model used for the simulation. It uses a combination of transition probability matrices and a Weibull distribution to generate wind speeds and wave heights that are both sufficiently correlated to each other and themselves. The data this is based on was divided by month of the year, so the model takes time of year into account. Given the degree to which this type of project depends on the weather conditions, a realistic and sophisticated model like this is beneficial for the applicability of the model. 
 
@@ -203,14 +203,13 @@ The main methods used in the literature are simulation and optimisation, but the
 
 \section{Simulation tool} \label{s:sim}
 %HERE I WILL MOSTLY SAY WHAT I CURRENTLY HAVE ON MY WAY TO A SIMULATION TOOL, AND WHAT I AM PLANNING TO DO WITH IT
-Apart from getting caught up with the literature, over the past year I have also laid the foundations for some practical experiments. I have programmed the basics of an adaptable simulator from scratch. It is not yet operational and not very developed so far, but it can easily be expanded upon to fit future research. Currently it simulates different vessels that each have a schedule of tasks they work on. In my current implementation, task duration is deterministic and independent of the weather, but this will obviously be changed when an actual model is being tested. When a vessel cannot perform a certain task during the current weather, it will wait at a designated spot, but it more likely will end up waiting near the location of its next task. Currently the set of vessels is constant and the project is simply completed in the shortest possible timespan, but this can be changed depending on the model design. The size of a single time step can be adjusted to most reasonable values without problems. 
+In addition to getting caught up with the literature, I have also laid the foundations for some practical experiments. I have programmed the basics of an adaptable simulator from scratch. It is not yet operational and not very developed so far, but it can easily be expanded upon to fit future research. The use of this simulator would be checking feasibility of a generated schedule and analyzing the impacts of uncertain factors of the project. Currently it simulates a fixed set of different vessels that each have a schedule of tasks they aim to complete in the shortest timespan, but this can be changed based on the model design. In my current implementation, task duration is deterministic and independent of the weather conditions, but this will obviously be changed when an actual model is being tested. When a vessel cannot perform a certain task during the current weather conditions, it will wait at a designated spot, but it could also end up waiting near the location of its next task. The size of a single time step can be adjusted to most reasonable values without problems. 
 
 %Paragraph about implementation (c++ and matlab)
-The simulator has been implemented in C++ as it seems the most fitting out of all the languages I am proficient with. A benefit of C++ is that is can easily be combined with Matlab. I am planning to implement the optimisation model in Matlab as it is very suited for such uses and this will hopefully lead to a well optimised implementation (in terms of computational speed). While I am not yet proficient with Matlab, I hope I can then let the optimisation model in Matlab and the simulation model in C++ work together in whichever way I try (as this is dependent on the model design). 
+The simulator has been implemented in C++, as it seems well suited for this. A benefit is that C++ can easily be combined with Matlab, which I am planning to implement the optimisation model in, as it is very suited for such uses and this will hopefully lead to a efficient implementation. While I am not yet proficient with Matlab, I have started learning it and I think I can then let the optimisation model in Matlab and the simulation model in C++ work together in a way useful for the model. 
 
 %Paragraph about its uses
-%TODO: Point out goals of sim, like determine feasibility and analyse uncertainty
-My goal for this simulator is for it to be usable as a tool in most of the likely research directions my PhD will go. The way it is currently set up the simulator is most suitable for fixed-task projects such as installation and decommission of the energy sites. However it is possible to adapt the simulator for other types of projects such as the maintenance of the site. In \Cref{s:concl} I will discuss various research directions; the simulator could be used for each of those directions. 
+My goal for this simulator is for it to be usable as a tool in most of the likely research directions my PhD can go. The way it is currently set up the simulator is most suitable for fixed-task projects such as installation and decommission of the energy sites. However it is possible to adapt the simulator for other types of projects such as the maintenance of the site. In \Cref{s:concl} I will discuss various research directions; the simulator could be used for each of those directions. 
 
 \pagebreak
 
@@ -241,7 +240,7 @@ Since research is inherently exploratory and unpredictable, it is impossible to 
 
 My immediate focus will now move to the first direction discussed, that of the installation project. The plan is to focus on that for the next 6 months, and then review where to go from there. It is currently hard to say whether only following this direction will lead to a big and novel enough result for a PhD thesis. The individual components (uncertainty scheduling, aggregate scheduling, using net present value) have all been researched in the literature, but not in this combination. So the resulting model would be related to the models discussed in various papers, but their combination might be different enough to significantly transform the problem and its computability. The goal of the next 6 months is to do preliminary research in this direction and explore whether the new problem is far enough away from the existing literature. Depending on this result, a decision will be made whether to continue purely in this direction, or to shift to the third direction and include maintenance as well to create a general decision support tool, or to fully shift to the maintenance direction if the installation direction does not appear to be a valuable enough research area. 
 
-A possible timeline for this would be:
+A possible timeline for this would be:	
 
 \begin{itemize}
 	\item Year 2, first half: Finish basic simulator, design model for installation project, choose and implement optimisation algorithm for it
@@ -258,5 +257,6 @@ This is the scenario in which I combine the installation and maintenance directi
 \bibliography{mybib}
 
 %TODO: Uniformilize usage of I and We
+%TODO: Uniformilize usage of optimisation/optimization and analyse/analyze
 
 \end{document}
